--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,22 @@
       "DOM",
       "ES2020"
     ],
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "ES2020",
+    "moduleResolution": "Node",
     "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true
   },
   "ts-node": {
     "esm": true
-  }
+  },
+  "exclude": [
+    "**/node_modules"
+  ],
+  "include": [
+    "./src"
+  ]
 }
