--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "DOM",
       "ES2020"
     ],
-    "module": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "rootDir": "./src",
     "outDir": "./dist",
