--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A chess game.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "node --test dist",
+    "test": "jest",
     "build": "tsc",
     "build:watch": "tsc --watch"
   },
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/MelvDouc/melv_chess#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
