--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,7 @@
     "esm": true
   },
   "exclude": [
-    "**/node_modules"
-  ],
-  "include": [
-    "./src"
+    "**/node_modules",
+    "./src/**/*.test.ts"
   ]
 }
