--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "melv_chess",
+  "name": "chacomat",
   "version": "1.0.0",
-  "description": "A chess game.",
+  "description": "A TypeScript chess game.",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MelvDouc/melv_chess.git"
+    "url": "git+https://github.com/MelvDouc/chacomat.git"
   },
   "keywords": [
     "chess",
@@ -19,9 +19,9 @@
   "author": "Melvin Doucet <melv.douc@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MelvDouc/melv_chess/issues"
+    "url": "https://github.com/MelvDouc/chacomat/issues"
   },
-  "homepage": "https://github.com/MelvDouc/melv_chess#readme",
+  "homepage": "https://github.com/MelvDouc/chacomat#readme",
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
