--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "A TypeScript chess game.",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build": "rm -rf dist && tsc",
+    "build:watch": "rm -rf dist && tsc --watch"
   },
   "repository": {
     "type": "git",
