--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
       "DOM",
       "ES2020"
     ],
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "module": "ES2020",
+    "moduleResolution": "Node16",
     "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
@@ -19,6 +19,8 @@
   },
   "exclude": [
     "**/node_modules",
-    "./src/**/*.test.ts"
+    "./src/**/*.test.ts",
+    "dist",
+    "test"
   ]
 }
