--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose ./src",
     "build": "rm -rf dist && tsc",
     "build:watch": "rm -rf dist && tsc --watch"
   },
