--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --verbose",
-    "build": "rm -rf dist && tsc",
-    "build:watch": "rm -rf dist && tsc --watch"
+    "build": "rm -rf dist && tsc && tsc-alias"
   },
   "repository": {
     "type": "git",
@@ -29,6 +28,7 @@
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.2",
     "typescript": "^4.9.4"
   }
 }
