--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,16 +9,26 @@
     "moduleResolution": "Node16",
     "rootDir": "./src",
     "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": [
+        "src/*"
+      ]
+    },
     "strict": true,
     "strictPropertyInitialization": false,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
+    "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true
   },
   "ts-node": {
     "esm": true
   },
+  "include": [
+    "./src"
+  ],
   "exclude": [
     "**/node_modules",
     "./src/**/*.test.ts",
