--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
-      "@src/*": [
-        "src/*"
+      "@pieces/*": [
+        "src/pieces/*"
       ]
     },
     "strict": true,
@@ -27,7 +27,7 @@
     "esm": true
   },
   "include": [
-    "./src"
+    "./src/**/*"
   ],
   "exclude": [
     "**/node_modules",
