--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A TypeScript chess game.",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "jest --verbose",
     "build": "rm -rf dist && tsc && tsc-alias"
