--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     },
     "strict": true,
     "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "exactOptionalPropertyTypes": true,
