--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -30,3 +30,5 @@ rules:
       argsIgnorePattern: ".*"
   "@typescript-eslint/no-non-null-assertion":
     - warn
+  "@typescript-eslint/no-empty-interface":
+    - off
