--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "melv_observable": "^2.0.0"
   }
 }
