--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "jest --verbose",
-    "build": "rm -rf dist && tsc && tsc-alias",
+    "build": "rm -rf dist/* && npx tsc && npx tsc-alias",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/MelvDouc/chacomat#readme",
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
+    "@types/node": "^20.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.2",
-    "typescript": "^4.9.4"
+    "tsc-alias": "^1.8.6",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "melv_observable": "^2.0.1"
