--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,36 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "baseUrl": ".",
+    "declaration": true,
+    "esModuleInterop": true,
+    "isolatedModules": false,
+    "lib": [
+      "ES2020"
+    ],
     "module": "ES2020",
     "moduleResolution": "Node16",
-    "rootDir": "./src",
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
     "outDir": "./dist",
-    "baseUrl": ".",
-    "esModuleInterop": true,
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": [
+        "./src/*"
+      ]
     },
+    "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true
+    "target": "ES2020",
   },
   "ts-node": {
     "esm": true
   },
-  "include": ["./src/**/*"],
-  "exclude": ["**/node_modules", "dist", "test", "jest.config.ts"]
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules/**/*",
+    "dist/**/*"
+  ]
 }
