--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --verbose",
+    "test": "node --test dist/test/*.test.js",
     "build": "rm -rf dist/* && npx tsc && npx tsc-alias",
     "prepublishOnly": "npm run build"
   },
