--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "npm run build && node --test dist/test/*.test.js",
-    "build": "rm -rf dist/* && npx tsc && npx tsc-alias",
+    "build": "npx tsc && npx tsc-alias",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -28,8 +28,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.6",
     "typescript": "^5.0.4"
   },
