--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chacomat",
   "version": "2.0.0",
-  "description": "An environment-independent chess game.",
+  "description": "An TypeScript chess game.",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
