--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,28 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "target": "ES2022",
+    "lib": [
+      "ES2022"
+    ],
+    "rootDir": "src",
+    "outDir": "dist",
+    "baseUrl": "src",
+    "paths": {
+      "@*": [
+        "./*"
+      ],
+    },
     "declaration": true,
     "esModuleInterop": true,
     "isolatedModules": false,
-    "lib": [
-      "ES2020"
-    ],
-    "module": "ES2020",
-    "moduleResolution": "Node16",
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "outDir": "./dist",
-    "paths": {
-      "@src/*": [
-        "./src/*"
-      ]
-    },
-    "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
-    "target": "ES2020",
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true
   },
-  "ts-node": {
-    "esm": true
-  },
-  "include": [
-    "./src/**/*"
-  ],
   "exclude": [
-    "node_modules/**/*",
-    "dist/**/*"
+    "node_modules",
+    "dist",
+    "old"
   ]
 }
