--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "node --test ./tests",
+    "test": "node --test -r ts-node/register --loader ts-node/esm",
     "build": "npx tsc && npx tsc-alias",
     "prepublishOnly": "npm run build"
   },
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/MelvDouc/chacomat#readme",
   "devDependencies": {
     "@types/node": "^20.1.4",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.6",
     "typescript": "^5.0.4"
   }
