--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,33 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
     "lib": [
-      "ES2022"
+      "ES2020"
     ],
-    "rootDir": "src",
     "outDir": "dist",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
       "@*": [
-        "./*"
+        "./src/*"
       ],
     },
+    "module": "ES2020",
     "declaration": true,
     "esModuleInterop": true,
-    "isolatedModules": false,
+    "skipLibCheck": true,
+    // STRICTNESS
     "strict": true,
     "strictPropertyInitialization": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true
   },
+  "include": [
+    "src",
+    "tests"
+  ],
   "exclude": [
-    "node_modules",
     "dist",
+    "node_modules",
     "old"
   ]
 }
