--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "lib": [
-      "ES2020"
+      "ES2022"
     ],
     "outDir": "dist",
     "baseUrl": ".",
@@ -22,8 +22,7 @@
     "noPropertyAccessFromIndexSignature": true
   },
   "include": [
-    "src",
-    "tests"
+    "src"
   ],
   "exclude": [
     "dist",
