--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "npm run build && node --test dist/tests",
+    "test": "node --test dist/tests",
     "build": "npx tsc && npx tsc-alias",
     "prepublishOnly": "npm run build"
   },
