--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "bench": "deno bench -A benchmarks/**/*"
+    "bench": "deno bench -A benchmarks/**/*",
+    "build_npm": "deno run -A scripts/build_npm.ts"
   },
   "imports": {
     "@/": "./src/",
