--- a/deno.json
+++ b/deno.json
@@ -1,14 +1,13 @@
 {
   "tasks": {
-    "bench": "deno bench -A benchmarks/**/*",
-    "build_npm": "deno run -A --unstable scripts/build_npm.ts"
+    "build_npm": "deno run -A scripts/build_npm.ts"
   },
   "imports": {
     "@/": "./src/",
-    "$dev_deps": "./dev_deps.ts"
+    "@dev_deps": "./dev_deps.ts"
   },
   "compilerOptions": {
-    "noImplicitOverride": true,
+    "noImplicitOverride": false,
     "strict": true
   }
 }
