--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "build_npm": "deno run -A scripts/build_npm.ts"
+    "build_npm": "deno run -A scripts/build_npm.ts",
+    "test": "clear && deno test -A && deno bench -A"
   },
   "imports": {
     "@/": "./src/",
