--- a/tsconfig.npm.json
+++ b/tsconfig.npm.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ES2022",
     "lib": [
-      "ES2022"
+      "ES2022",
+      "DOM"
     ],
+    "moduleResolution": "Node",
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
