--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
   "name": "chacomat",
   "version": "2.1.1",
-  "main": "dist/index.js",
-  "type": "module",
-  "description": "A TypeScript chess game.",
-  "keywords": [
-    "chess"
-  ],
   "author": {
     "name": "Melvin Doucet",
     "email": "melv.douc@gmail.com",
     "url": "https://www.melvin-doucet.com"
   },
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/MelvDouc/chacomat.git"
   },
-  "scripts": {
-    "bench": "bun benchmarks/benchmarks.ts",
-    "build": "rm -rf dist/* && bun run scripts/build.ts",
-    "prepublishOnly": "bun run build"
+  "main": "dist/index.js",
+  "dependencies": {
+    "pgnify": "1.0.6"
   },
   "devDependencies": {
     "bun-plugin-dts": "^0.2.1",
     "bun-types": "latest",
     "mitata": "^0.1.6",
-    "tsc-alias": "^1.8.8"
+    "typescript": "^5.3.2"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "description": "A TypeScript chess game.",
+  "keywords": [
+    "chess"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "bench": "bun benchmarks/benchmarks.ts",
+    "build": "rm -rf dist/* && bun run scripts/build.ts",
+    "prepublishOnly": "bun run build"
   },
-  "dependencies": {
-    "pgnify": "1.0.4"
-  }
+  "type": "module"
 }
