--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chacomat",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "type": "module",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
   "description": "A TypeScript chess game.",
   "keywords": [
     "chess"
