--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "pgnify": "1.0.6"
+    "pgnify": "^1.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
