--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "chacomat",
   "version": "2.1.8",
-  "type": "module",
   "main": "dist/index.js",
+  "type": "module",
+  "exports": {
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "description": "A TypeScript chess game.",
   "keywords": [
     "chess"
@@ -15,13 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MelvDouc/chacomat.git"
+    "url": "git+https://github.com/MelvDouc/chacomat.git"
   },
   "scripts": {
-    "clear-dist": "rm -rf dist/*",
     "bench": "tsx benchmarks/index.ts",
-    "build": "npm run clear-dist && npx tsc -p tsconfig.build.json && npx tsc-alias -p tsconfig.build.json",
-    "test": "tsx --test ./tests/**/*_test.ts",
+    "build": "npx tsup src/index.ts --format=cjs,esm --dts",
+    "test": "tsx --test",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -32,7 +41,7 @@
     "@types/node": "^20.10.5",
     "chai": "^4.3.10",
     "mitata": "^0.1.6",
-    "tsc-alias": "^1.8.8",
+    "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.2"
   }
